solving bug: overflow on login page

--- a/src/containers/CreatePlanning/CreatePlanning.scss
+++ b/src/containers/CreatePlanning/CreatePlanning.scss
@@ -1,9 +1,10 @@
 @import "../../styles/variables";
 @import url("https://use.typekit.net/bsf1heu.css");
 
-.main {
+.create-planning-main {
   background-color: $background_color;
-
+  display: flex;
+ 
   .container-block {
     display: block;
 
