--- a/src/containers/PlanningList/PlanningList.scss
+++ b/src/containers/PlanningList/PlanningList.scss
@@ -1,173 +1,183 @@
 @import url("https://use.typekit.net/bsf1heu.css");
+@import "../../styles/variables";
 
-h2 {
-    color: #23282D;
-    font-size: 16px;
-}
-
-.content-planning {
+.list-planning-main {
     display: flex;
-    flex-direction: column;
-    width: 80%;
-}
+    background-color: $background_color;
+   
+    h2 {
+        color: #23282D;
+        font-size: 16px;
+    }
 
-.content-new-planning {
-    display: flex;
-    width: 100%;
-    height: 200px;
-    margin-top: 20px;
-    margin-left: 42px;
-    margin-bottom: -20px;
-}
+    .content-planning {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        overflow-x: hidden;
+        overflow-y: auto;
+        margin-left: 30px;
+    }
 
-.content-theme-list {
-    display: flex;
-    width: 100%;
-    height: 200px;
-}
+    .content-new-planning {
+        display: flex;
+        width: 100%;
+        height: 200px;
+        margin-top: 20px;
+        margin-left: 42px;
+        margin-bottom: -20px;
+    }
+
+    .content-theme-list {
+        display: flex;
+        width: 100%;
+        height: 200px;
+    }
 
 
-.new-planning {
-    background: #FFFFFF;
-    width: 236px;
-    height: 150px;
-    box-shadow: 0px 1px 2px #0000001A;
-    border-radius: 8px;
-    font-size: 16px;
-    font-family: proxima-nova;
-    text-align: center;
-    position: absolute;
-}
+    .new-planning {
+        background: #FFFFFF;
+        width: 236px;
+        height: 150px;
+        box-shadow: 0px 1px 2px #0000001A;
+        border-radius: 8px;
+        font-size: 16px;
+        font-family: proxima-nova;
+        text-align: center;
+        // position: absolute;
+    }
 
-.planning-title {
-    color: #23282D;
-    font-size: 16px;
-    opacity: 1;
-}
+    .planning-title {
+        color: #23282D;
+        font-size: 16px;
+        opacity: 1;
+    }
 
-.theme-list-activated {
-    background: #FFFFFF;
-    width: 236px;
-    height: 150px;
-    box-shadow: 0px 2px 2px #0000001A;
-    border-radius: 8px;
-    font-size: 16px;
-    font-family: proxima-nova;
-    border-top: 8px solid #D6F1E2;
-    list-style-type: none;
-}
+    .theme-list-activated {
+        background: #FFFFFF;
+        width: 236px;
+        height: 150px;
+        box-shadow: 0px 2px 2px #0000001A;
+        border-radius: 8px;
+        font-size: 16px;
+        font-family: proxima-nova;
+        border-top: 8px solid #D6F1E2;
+        list-style-type: none;
+    }
 
-.theme-list-deactivated {
-    background: #FFFFFF;
-    width: 236px;
-    height: 150px;
-    box-shadow: 0px 2px 2px #0000001A;
-    border-radius: 8px;
-    font-size: 16px;
-    font-family: proxima-nova;
-    border-top: 8px solid #F7EBD6;
-    list-style-type: none;
-}
+    .theme-list-deactivated {
+        background: #FFFFFF;
+        width: 236px;
+        height: 150px;
+        box-shadow: 0px 2px 2px #0000001A;
+        border-radius: 8px;
+        font-size: 16px;
+        font-family: proxima-nova;
+        border-top: 8px solid #F7EBD6;
+        list-style-type: none;
+    }
 
-.dates {
-    color: #8995A0;
-    font-size: 12px;
-    margin-left: 20px;
-    letter-spacing: 1px;
-    margin-top: 20px;
-}
-
-.status-option {
-
-    .status {
+    .dates {
         color: #8995A0;
         font-size: 12px;
         margin-left: 20px;
-        letter-spacing: 0px;
-        margin-top: 75px;
-        letter-spacing: 0px;
+        letter-spacing: 1px;
+        margin-top: 20px;
     }
 
-    .option {
-        margin-top: -22px;
-        margin-left: 200px;
-        z-index: 9999;
+    .status-option {
 
-        img {
-            cursor: pointer;
+        .status {
+            color: #8995A0;
+            font-size: 12px;
+            margin-left: 20px;
+            letter-spacing: 0px;
+            margin-top: 75px;
+            letter-spacing: 0px;
         }
 
-        select {
-            position: relative;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            text-indent: 1px;
-            text-overflow: '';
-            border-radius: 3px;
-            background-color: #fff;
-            border: none;
-            overflow: hidden;
-            font-family: proxima-nova;
-            padding: 4px;
-            outline: 0;
+        .option {
+            margin-top: -22px;
+            margin-left: 200px;
+            z-index: 9999;
 
-            option {
+            img {
                 cursor: pointer;
+            }
+
+            select {
+                position: relative;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                text-indent: 1px;
+                text-overflow: '';
+                border-radius: 3px;
+                background-color: #fff;
+                border: none;
+                overflow: hidden;
+                font-family: proxima-nova;
+                padding: 4px;
+                outline: 0;
+
+                option {
+                    cursor: pointer;
+                }
             }
         }
     }
-}
 
-.container-image {
-    margin-bottom: 37px;
-    margin-top: 37px;
-    margin-right: 27px;
-    margin-left: 27px;
-    border: none;
-    background: #fff;
-}
-
-.title-planning {
-    display: flex;
-    margin-left: 42px;
-    margin-top: 42px;
-
-    .main-title {
-        width: 183px;
-        height: 34px;
-        text-align: left;
-        font: normal normal medium 28px/32px Proxima Nova;
-        letter-spacing: 0px;
-        color: #23282D;
-        opacity: 1;
-        margin: none;
-        font-size: 28px;
+    .container-image {
+        margin-bottom: 37px;
+        margin-top: 37px;
+        margin-right: 27px;
+        margin-left: 27px;
+        border: none;
+        background: #fff;
     }
 
-    .planning-count {
-        color: #777777;
-        font-family: proxima-nova, sans-serif;
-        font-weight: bolder;
-        background-color: #DDDDDD;
-        width: 32px;
-        height: 32px;
-        padding: 10px;
-        border-radius: 8px;
+    .title-planning {
         display: flex;
-        align-items: center;
+        margin-left: 42px;
+        margin-top: 42px;
+
+        .main-title {
+            width: 183px;
+            height: 34px;
+            text-align: left;
+            font: normal normal medium 28px/32px Proxima Nova;
+            letter-spacing: 0px;
+            color: #23282D;
+            opacity: 1;
+            margin: none;
+            font-size: 28px;
+        }
+
+        .planning-count {
+            color: #777777;
+            font-family: proxima-nova, sans-serif;
+            font-weight: bolder;
+            background-color: #DDDDDD;
+            width: 32px;
+            height: 32px;
+            padding: 10px;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+        }
     }
-}
 
-ul {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-}
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
 
-.card-name {
-    margin-left: 20px;
-}
+    .card-name {
+        margin-left: 20px;
+    }
 
-span {
-    margin-left: 10px;
+    span {
+        margin-left: 10px;
+    }
+
 }
