--- a/src/containers/RefinePlanning/RefinePlanning.scss
+++ b/src/containers/RefinePlanning/RefinePlanning.scss
@@ -6,8 +6,9 @@
     display: flex;
 }
 
-.main {
+.refine-planning-main {
     background-color: $background_color;
+    display: flex;
 
     .container-flex {
         width: 80%;
